--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -24,6 +24,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
 
     - name: Use Node.js 16
       uses: actions/setup-node@v1
